--- a/templates/systemd.erb
+++ b/templates/systemd.erb
@@ -12,7 +12,7 @@ Group=redis
 RuntimeDirectory=redis
 RuntimeDirectoryMode=0700
 
-ExecStart=/usr/bin/redis-server <%= scope.lookupvar('redis_sentinel::config_file') %>
+ExecStart=/usr/bin/redis-server <%= scope.lookupvar('redis_sentinel::config_file') %> --sentinel
 ExecStop=/usr/bin/redis-cli shutdown
 Restart=always
 
